--- a/FastMath/views/index.ejs
+++ b/FastMath/views/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color:#975BFF">
     <head>
       <%- include('partials/head'); %>
     </head>
-    <body class="container">
+    <body class="container mt-5" style="background-color:#975BFF">
         <main>
           <div class="title jumbotron">
             <div class="row">
@@ -15,11 +15,11 @@
                 </div>
 
                 <div class="col-md-6 text-center">
-                    <button class="btn btn-outline-primary" onclick="randomNumber();">Do random number</button>
+                    <button class="btn btn-primary" onclick="randomNumber();">Do random number</button>
                     <br><br>
-                    <button class="btn btn-outline-danger" onclick="randomMethod();">Do random method</button>
+                    <button class="btn btn-danger" onclick="randomMethod();">Do random method</button>
                     <br><br>
-                    <button class="btn btn-outline-secondary" onclick="randomNumber();randomMethod();">Fully randomize</button>
+                    <button class="btn btn-secondary" onclick="randomNumber();randomMethod();">Fully randomize</button>
                 </div>
             </div>
           </div>
@@ -53,11 +53,11 @@
         </div>
 
         <br>
+    </body>
 
-        <footer>
+    <footer>
           <%- include('partials/footer'); %>
         </footer>
-    </body>
 
     <script>
         function randomNumber() {
@@ -66,7 +66,7 @@
 
         function randomMethod() {
             if (Math.floor((Math.random() * 3)) == 1) {
-              document.forms["inpoot"]["toDo"].value = Math.floor((Math.random() * 50) + 1) + "-" + Math.floor((Math.random() * 100) + 51);
+              document.forms["inpoot"]["toDo"].value = Math.floor((Math.random() * 100) + 100) + "-" + Math.floor((Math.random() * 100) + 201);
             } else {
               document.forms["inpoot"]["toDo"].value = Math.floor((Math.random() * 100) + 1);
             }
