--- a/FastMath/views/partials/footer.ejs
+++ b/FastMath/views/partials/footer.ejs
@@ -1,1 +1,11 @@
-<p class="text-center text-muted">&copy; Copyright 2021 Foraged</p>
+<br>
+<div class="socials row container justify-content-center">
+	<div class="col-md-1 text-center">
+		<a style="color:#fff" href="https://github.com/forageddev"><i class="fa fa-3x fa-github"></i></a>
+	</div>
+	<div class="col-md-1 text-center">
+		<a style="color:#fff" href="https://twitter.com/foragedyt"><i class="fa fa-3x fa-twitter"></i></a>
+	</div>
+</div>
+<br>
+<p class="text-center text-white">&copy; Copyright 2021 Foraged</p>
