--- a/FastMath/views/partials/footer.ejs
+++ b/FastMath/views/partials/footer.ejs
@@ -6,6 +6,11 @@
 	<div class="col-md-1 text-center">
 		<a style="color:#fff" href="https://twitter.com/foragedyt"><i class="fa fa-3x fa-twitter"></i></a>
 	</div>
+	<div class="col-md-1 text-center">
+		<a style="color:#fff" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+			<i class="fa fa-3x fa-youtube"></i>
+		</a>
+	</div>
 </div>
 <br>
 <p class="text-center text-white">&copy; Copyright 2021 Foraged</p>
