--- a/FastMath/views/index.ejs
+++ b/FastMath/views/index.ejs
@@ -96,7 +96,7 @@
           } else if (number === "69" && toDo === "420") {
             ul.innerHTML = `<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
           } else if (number === "999" && toDo === "999") {
-            ul.innerHTML = `<iframe width="560" height="315" src="https://www.youtube.com/embed/_1zQgTGmMW4?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
+            ul.innerHTML = `<iframe width="560" height="315" src="https://www.youtube.com/embed/1zQgTGmMW4?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
           } else {
 
               if (toDo.includes("-")) {
